{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 2726,
  "lineage": "4f3e2d7a-3cf6-6512-2819-b7ae86339df7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-icmp-trafic-vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-07-15T04:02:47.292-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learn-cloud-1989/global/firewalls/allow-icmp-trafic-vpc1",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "allow-icmp-trafic-vpc1",
            "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc1",
            "priority": 1000,
            "project": "learn-cloud-1989",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/firewalls/allow-icmp-trafic-vpc1",
            "source_ranges": [
              "10.10.160.0/20",
              "10.11.160.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "squidsrv"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "testsrv"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-icmp-trafic-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-07-15T04:02:58.390-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learn-cloud-1989/global/firewalls/allow-icmp-trafic-vpc2",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "allow-icmp-trafic-vpc2",
            "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc2",
            "priority": 1000,
            "project": "learn-cloud-1989",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/firewalls/allow-icmp-trafic-vpc2",
            "source_ranges": [
              "10.10.160.0/20",
              "10.11.160.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "testsrv"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "squidsrv"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "enable-http-vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "9090"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-15T04:02:47.250-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learn-cloud-1989/global/firewalls/enable-http-vpc1",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "enable-http-vpc1",
            "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc1",
            "priority": 1000,
            "project": "learn-cloud-1989",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/firewalls/enable-http-vpc1",
            "source_ranges": [
              "0.0.0.0/0",
              "10.10.160.0/20",
              "10.11.160.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "enable-http-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "9090"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-15T04:02:58.497-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learn-cloud-1989/global/firewalls/enable-http-vpc2",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "enable-http-vpc2",
            "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc2",
            "priority": 1000,
            "project": "learn-cloud-1989",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/firewalls/enable-http-vpc2",
            "source_ranges": [
              "0.0.0.0/0",
              "10.10.160.0/20",
              "10.11.160.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "enable-iap-vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8080",
                  "8081",
                  "3128",
                  "10000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-15T04:02:47.270-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learn-cloud-1989/global/firewalls/enable-iap-vpc1",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "enable-iap-vpc1",
            "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc1",
            "priority": 1000,
            "project": "learn-cloud-1989",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/firewalls/enable-iap-vpc1",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "account"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "enable-iap-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8080",
                  "8081",
                  "3128",
                  "10000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-15T04:02:58.453-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learn-cloud-1989/global/firewalls/enable-iap-vpc2",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "enable-iap-vpc2",
            "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc2",
            "priority": 1000,
            "project": "learn-cloud-1989",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/firewalls/enable-iap-vpc2",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "account"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "srv-WebSphere",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rhel-cloud/global/images/rhel-8-v20220519",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/zones/us-central1-a/disks/srv-websphere"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/learn-cloud-1989/zones/us-central1-a/instances/srv-websphere",
            "instance_id": "7237248320463137278",
            "label_fingerprint": "tWGliddkcAw=",
            "labels": {
              "dept": "account"
            },
            "machine_type": "e2-standard-4",
            "metadata": {
              "block-project-ssh-keys": "true",
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "PIHB5_Ii_TQ=",
            "name": "srv-websphere",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc1",
                "network_ip": "10.10.160.6",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/regions/us-central1/subnetworks/us-central1-subnet-1",
                "subnetwork_project": "learn-cloud-1989"
              }
            ],
            "project": "learn-cloud-1989",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/zones/us-central1-a/instances/srv-websphere",
            "service_account": [
              {
                "email": "1028362908888-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "testsrv"
            ],
            "tags_fingerprint": "YeW1PoDQU7g=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc1",
            "google_compute_subnetwork.us-central1-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "srv-ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rhel-cloud/global/images/rhel-8-v20220519",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/zones/us-central1-a/disks/srv-ansible"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/learn-cloud-1989/zones/us-central1-a/instances/srv-ansible",
            "instance_id": "3192752234286610308",
            "label_fingerprint": "tWGliddkcAw=",
            "labels": {
              "dept": "account"
            },
            "machine_type": "e2-standard-4",
            "metadata": {
              "block-project-ssh-keys": "true",
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "TR77hkWG5BE=",
            "metadata_startup_script": "#! /bin/bash\nsudo su\nyum install java-11-openjdk-devel -y\n#update-alternatives --config java\nyum install wget -y\nwget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo\nrpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io.key\nyum repolist\nyum install jenkins -y\nfirewall-cmd --add-port=8080/tcp --permanent\nfirewall-cmd --reload\nsystemctl start service jenkins\n\nsudo yum install -y yum-utils\nsudo yum-co [...]
            "name": "srv-ansible",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc1",
                "network_ip": "10.10.160.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/regions/us-central1/subnetworks/us-central1-subnet-1",
                "subnetwork_project": "learn-cloud-1989"
              }
            ],
            "project": "learn-cloud-1989",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/zones/us-central1-a/instances/srv-ansible",
            "service_account": [
              {
                "email": "1028362908888-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "testsrv"
            ],
            "tags_fingerprint": "YeW1PoDQU7g=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc1",
            "google_compute_subnetwork.us-central1-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "srv-nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rhel-cloud/global/images/rhel-8-v20220519",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/zones/us-central1-a/disks/srv-nexus"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/learn-cloud-1989/zones/us-central1-a/instances/srv-nexus",
            "instance_id": "1796572573832378244",
            "label_fingerprint": "tWGliddkcAw=",
            "labels": {
              "dept": "account"
            },
            "machine_type": "e2-standard-4",
            "metadata": {
              "block-project-ssh-keys": "true",
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "ssfG1yrWPjw=",
            "metadata_startup_script": "#! /bin/bash\nsudo su\nsudo yum install java-1.8.0-openjdk-devel -y\n#install required packages\nyum install -y yum-utils \\\ndevice-mapper-persistent-data \\\nlvm2\n#setup a stable repo\ndnf config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo\ndnf list docker-ce\n#install docker engine\ndnf install docker-ce --nobest -y\nsystemctl start docker\nsystemctl enable docker\n#dnf install curl -y\n\n#pull docker\ndocker pull sonatyp [...]
            "name": "srv-nexus",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc1",
                "network_ip": "10.10.160.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/regions/us-central1/subnetworks/us-central1-subnet-1",
                "subnetwork_project": "learn-cloud-1989"
              }
            ],
            "project": "learn-cloud-1989",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/zones/us-central1-a/instances/srv-nexus",
            "service_account": [
              {
                "email": "1028362908888-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "testsrv"
            ],
            "tags_fingerprint": "YeW1PoDQU7g=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc1",
            "google_compute_subnetwork.us-central1-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "srv-nexus-man",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rhel-cloud/global/images/rhel-8-v20220519",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/zones/us-central1-a/disks/srv-nexus-man"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/learn-cloud-1989/zones/us-central1-a/instances/srv-nexus-man",
            "instance_id": "3551386405844085019",
            "label_fingerprint": "tWGliddkcAw=",
            "labels": {
              "dept": "account"
            },
            "machine_type": "e2-standard-4",
            "metadata": {
              "block-project-ssh-keys": "true",
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "whVHPngty_A=",
            "metadata_startup_script": "#! /bin/bash\nsudo su\nsudo yum update -y\nsudo yum install wget -y\nsudo yum install java-1.8.0-openjdk-devel -y\nsudo yum install java-1.8.0-openjdk.x86_64 -y\ncd /opt\nsudo wget http://download.sonatype.com/nexus/3/nexus-3.23.0-03-unix.tar.gz\nsudo tar -xvf nexus-3.23.0-03-unix.tar.gz\nmkdir nexus\nsudo mv nexus-3.23.0-03 nexus\nsudo adduser nexus\n\n\nsudo chown -R nexus:nexus /opt/nexus\nsudo chown -R nexus:nexus /opt/sonatype-work\n#sudo vi /opt/nexu [...]
            "name": "srv-nexus-man",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc1",
                "network_ip": "10.10.160.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/regions/us-central1/subnetworks/us-central1-subnet-1",
                "subnetwork_project": "learn-cloud-1989"
              }
            ],
            "project": "learn-cloud-1989",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/zones/us-central1-a/instances/srv-nexus-man",
            "service_account": [
              {
                "email": "1028362908888-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "testsrv"
            ],
            "tags_fingerprint": "YeW1PoDQU7g=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc1",
            "google_compute_subnetwork.us-central1-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "srv-squid",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rhel-cloud/global/images/rhel-8-v20220519",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/zones/asia-south1-a/disks/srv-squid"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/learn-cloud-1989/zones/asia-south1-a/instances/srv-squid",
            "instance_id": "514220971335147876",
            "label_fingerprint": "tWGliddkcAw=",
            "labels": {
              "dept": "account"
            },
            "machine_type": "e2-standard-4",
            "metadata": {
              "block-project-ssh-keys": "true",
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "RZPZjX9h2SA=",
            "metadata_startup_script": "#! /bin/bash\nsudo yum update -y\nsudo yum -y install epel-release\nsudo yum -y update\nsudo yum clean all\nsudo yum -y install squid\nsudo systemctl start squid\nsudo systemctl enable squid\nsudo systemctl status squid\n\n\n#restart squid service after reconfigure\n#sudo squid -k reconfigure",
            "name": "srv-squid",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc2",
                "network_ip": "10.11.160.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/regions/asia-south1/subnetworks/asia-south1-subnet-1",
                "subnetwork_project": "learn-cloud-1989"
              }
            ],
            "project": "learn-cloud-1989",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/zones/asia-south1-a/instances/srv-squid",
            "service_account": [
              {
                "email": "1028362908888-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "squidsrv"
            ],
            "tags_fingerprint": "nyyr5eBwacc=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc2",
            "google_compute_subnetwork.asia-south1-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "srv4-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rhel-cloud/global/images/rhel-8-v20220519",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/zones/us-central1-a/disks/srv-jenkins"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/learn-cloud-1989/zones/us-central1-a/instances/srv-jenkins",
            "instance_id": "3839274073670347032",
            "label_fingerprint": "tWGliddkcAw=",
            "labels": {
              "dept": "account"
            },
            "machine_type": "e2-standard-4",
            "metadata": {
              "block-project-ssh-keys": "true",
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "TR77hkWG5BE=",
            "metadata_startup_script": "#! /bin/bash\nsudo su\nyum install java-11-openjdk-devel -y\n#update-alternatives --config java\nyum install wget -y\nwget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo\nrpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io.key\nyum repolist\nyum install jenkins -y\nfirewall-cmd --add-port=8080/tcp --permanent\nfirewall-cmd --reload\nsystemctl start service jenkins\n\nsudo yum install -y yum-utils\nsudo yum-co [...]
            "name": "srv-jenkins",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc1",
                "network_ip": "10.10.160.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/regions/us-central1/subnetworks/us-central1-subnet-1",
                "subnetwork_project": "learn-cloud-1989"
              }
            ],
            "project": "learn-cloud-1989",
            "scheduling": [
              {
                "automatic_restart": false,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/zones/us-central1-a/instances/srv-jenkins",
            "service_account": [
              {
                "email": "1028362908888-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "testsrv"
            ],
            "tags_fingerprint": "YeW1PoDQU7g=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc1",
            "google_compute_subnetwork.us-central1-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "learn-cloud-1989-vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Dev VPC",
            "id": "projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc1",
            "mtu": 0,
            "name": "learn-cloud-1989-vpc1",
            "project": "learn-cloud-1989",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "learn-cloud-1989-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Dev VPC",
            "id": "projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc2",
            "mtu": 0,
            "name": "learn-cloud-1989-vpc2",
            "project": "learn-cloud-1989",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "us-central-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514
              }
            ],
            "creation_timestamp": "2022-07-15T05:37:45.187-07:00",
            "id": "projects/learn-cloud-1989/regions/asia-south1/routers/us-central-router",
            "name": "us-central-router",
            "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc2",
            "project": "learn-cloud-1989",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/regions/asia-south1/routers/us-central-router"
          },
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "asia-south1-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-15T04:03:02.135-07:00",
            "gateway_address": "10.11.160.1",
            "id": "projects/learn-cloud-1989/regions/asia-south1/subnetworks/asia-south1-subnet-1",
            "ip_cidr_range": "10.11.160.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "asia-south1-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc2",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "learn-cloud-1989",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/regions/asia-south1/subnetworks/asia-south1-subnet-1"
          },
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "us-central1-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-15T04:02:48.514-07:00",
            "gateway_address": "10.10.160.1",
            "id": "projects/learn-cloud-1989/regions/us-central1/subnetworks/us-central1-subnet-1",
            "ip_cidr_range": "10.10.160.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "us-central1-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/global/networks/learn-cloud-1989-vpc1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "learn-cloud-1989",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learn-cloud-1989/regions/us-central1/subnetworks/us-central1-subnet-1"
          },
          "dependencies": [
            "google_compute_network.learn-cloud-1989-vpc1"
          ]
        }
      ]
    }
  ]
}